--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,11 @@ imbalanced_learn==0.9.1
 imblearn==0.0
 joblib==1.1.0
 lifelines==0.27.1
-matplotlib==3.5.2
-numpy==1.23.1
-pandas==1.4.3
+matplotlib
+numpy
+pandas
 pandas_profiling==3.2.0
-scikit_learn==1.1.2
+scikit_learn
 streamlit==1.11.1
 streamlit_pandas_profiling==0.1.3
 altair==4.0
